# izsound

izsound-python/: AUTHORS  INSTALL  MANIFEST.in  README  setup.cfg  setup.py  swig-it.py  test.py
izsound-python/src/: bandfilter.i  blackhole.i  crossfader.i  datapicker.i  delayextrastereo.i  demultiplexer.i  flanger.i  fragmenter.i  izsound.i  libaooutput.i  maddecoder.i  oggfiledecoder.i  ossoutput.i  pitch.i  silencer.i  volume.i  whitenoise.i
izsound-src/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  THANKS  bootstrap.sh  configure.ac  stripdown.py
izsound-src/doc/: Makefile.am
izsound-src/doc/classes/: Makefile.am  doxyfile
izsound-src/doc/manual/: Makefile.am  bindings.xml  code-samples.xml  dsp.xml  intro.xml  manual.xml  sample-connection.cpp.xml  sample-dsp.cpp.xml  sample-dsp.h.xml  sample-pitched.cpp.xml  third-party.xml
izsound-src/doc/manual/images/: Makefile.am  dsp.dia  sample-chain.dia  sample-connections.dia  sample-pitch.dia
izsound-src/src/: Makefile.am
izsound-src/src/izsound/: Makefile.am  dspunit.cpp
izsound-src/src/izsound/izsound/: dspunit.h  player.h
izsound-src/src/std-dsp/: Makefile.am  bandfilter.cpp  blackhole.cpp  crossfader.cpp  datapicker.cpp  delayextrastereo.cpp  demultiplexer.cpp  flanger.cpp  fragmenter.cpp  libaooutput.cpp  maddecoder.cpp  oggfiledecoder.cpp  ossoutput.cpp  pitch.cpp  silencer.cpp  volume.cpp  whitenoise.cpp
izsound-src/src/std-dsp/izsound/: bandfilter.h  blackhole.h  crossfader.h  datapicker.h  delayextrastereo.h  demultiplexer.h  flanger.h  fragmenter.h  libaooutput.h  maddecoder.h  oggfiledecoder.h  ossoutput.h  pitch.h  silencer.h  volume.h  whitenoise.h
izsound-src/tests/: Makefile.am  main.cpp
