INCLUDES = -Iizsound ${all_includes}
lib_LTLIBRARIES = libizsound.la
libizsound_la_LDFLAGS = -version-info @SHARED_VERSION@
libizsound_la_SOURCES = dspunit.cpp
nobase_include_HEADERS = izsound/dspunit.h \
                         izsound/player.h  \
                         izsound/izsoundexception.h
